[package]
name = "quinn-udp"
version = "0.5.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UDP sockets with ECN information for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[features]
default = ["tracing", "log"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
log = ["tracing/log"]
direct-log = ["dep:log"]
# Use private Apple APIs to send multiple packets in a single syscall.
fast-apple-datapath = []

[dependencies]
libc = "0.2.158"
log = { workspace = true, optional = true }
socket2 = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
windows-sys = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net"] }

[build-dependencies]
cfg_aliases = "0.2"

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "throughput"
harness = false

[package.metadata.docs.rs]
all-features = true
