[package]
name = "ant-quic-test-network"
version = "0.14.88"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Large-scale network testing infrastructure for ant-quic"
keywords = ["quic", "nat-traversal", "p2p", "testing", "tui"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# Core ant-quic library
ant-quic = { path = "../.." }

# Web server for registry API
warp = "0.3"
futures-util = "0.3"

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for registry communication (rustls-tls for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"

# Concurrent data structures
dashmap = "6"

# Random number generation
rand = "0.8"

# Cryptographic hashing for test packets
sha2 = "0.10"

# Hex encoding for peer IDs
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Gossip protocol for decentralized peer/relay discovery (local path)
saorsa-gossip-pubsub = { path = "../../../saorsa-gossip/crates/pubsub" }
saorsa-gossip-membership = { path = "../../../saorsa-gossip/crates/membership" }
saorsa-gossip-types = { path = "../../../saorsa-gossip/crates/types" }
saorsa-gossip-coordinator = { path = "../../../saorsa-gossip/crates/coordinator" }
saorsa-gossip-identity = { path = "../../../saorsa-gossip/crates/identity" }

# Embedded static files for web dashboard
rust-embed = "8"
mime_guess = "2"

# Platform-specific paths for cache directory
dirs = "5.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ant-quic-test"
path = "src/main.rs"
